--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
+    "mongoose": "^9.1.1",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
